// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. should render with a caption 1`] = `
<View>
  <Text>
    “
  </Text>
  <Text>
    Some content
  </Text>
  <View>
    <Text>
      A caption
    </Text>
  </View>
</View>
`;

exports[`2. should render without a caption 1`] = `
<View>
  <Text>
    “
  </Text>
  <Text>
    Some content
  </Text>
  <View>
    <Text>
      
    </Text>
  </View>
</View>
`;

exports[`3. should render with a twitter handle 1`] = `
<View>
  <Text>
    “
  </Text>
  <Text>
    Some content
  </Text>
  <View>
    <Text>
      A caption
    </Text>
    <View>
      <IconTwitter
        height={10}
        width={12}
      />
      <TextLink
        target="_blank"
        url="https://twitter.com/@twitter"
      >
        @twitter
      </TextLink>
    </View>
  </View>
</View>
`;
